[package]
name = "anchor_basset_hub"
version = "0.1.0"
authors = ["MSNTCS <mohammad@terra.money>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["cranelift"]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]
cranelift = ["cosmwasm-vm/default-cranelift"]
singlepass = ["cosmwasm-vm/default-singlepass"]

[dependencies]
cw20 = "0.2"
cw20-base = { version = "0.2", features = ["library"] }
cosmwasm-std = { version = "0.10.1", features = ["staking"] }
cosmwasm-storage = { version = "0.10.1", features = ["iterator"] }
terra-cosmwasm = { version = "1.2.2" }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }
rand = "0.5.0"
anchor_basset_reward = {path = "../anchor_basset_reward" }
anchor_basset_token = {path = "../anchor_basset_token"}
hub_querier = {path = "../hub_querier" }
anchor_airdrop_registery = {path = "../anchor_airdrop_registery", default-features = false, version = "0.1.0"}
basset = { path = "../../packages/basset", default-features = false, version = "0.1.0"}
signed_integer = { path = "../../packages/signed_integers", default-features = false, version = "0.1.0"}

[dev-dependencies]
cosmwasm-vm = { version = "0.10.1", default-features = false, features = ["iterator"] }
cosmwasm-schema = { version = "0.11.0", default-features = false  }
