[package]
name = "anchor_basset_reward"
version = "0.1.0"
authors = ["MSNTCS <mohammad@terra.money>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = "0.2"
cosmwasm-std = { version = "0.10.1", features = ["iterator"] }
cosmwasm-storage = { version = "0.10.1", features = ["iterator"] }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.21" }
terra-cosmwasm = { version = "1.2.2" }
gov_courier = {path = "../gov_courier" }
basset = { path = "../../packages/basset", default-features = false, version = "0.1.0"}

[dev-dependencies]
cosmwasm-schema = { version = "0.11.0", default-features = false }
