[package]
name = "anchor_basset_rewards_dispatcher"
version = "0.1.0"
authors = ["Andrei Zavgorodnii <andrei.z@p2p.org>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "0.16.0" }
cosmwasm-storage = { version = "0.16.0" }
schemars = "0.8.0"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }
terra-cosmwasm = { version = "2.2.0" }
basset = { path = "../../packages/basset", default-features = false, version = "0.1.0"}
anchor_basset_reward = {path = "../anchor_basset_reward", features = ["library"] }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
