[package]
name = "anchor_basset_token"
version = "1.0.0"
authors = ["MSNTCS <mohammad@terra.money>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw2 = { version = "0.8.0" }
cw20 = { version = "0.8.0" }
cosmwasm-std = { version = "0.16.0", features = ["staking"] }
cosmwasm-storage = { version = "0.16.0", features = ["iterator"] }
cw-storage-plus = { version = "0.8.0", features = ["iterator"]}
schemars = "0.8.1"
cw20-legacy = "0.2.0"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }
basset = { path = "../../packages/basset", default-features = false, version = "0.1.0"}

[dev-dependencies]
# we only need to enable this if we use integration tests
#cosmwasm-vm = { version = "0.15.0", default-features = false }
cosmwasm-schema = { version = "0.16.0", default-features = false  }
